# dpdtrack

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  config.dist.ini  gitlab-ci.yml  pyproject.toml  test.py
src/dpdtrack/classes/: __init__.py  api.py  http.py  shipment.py
src/glsapi/classes/: __init__.py  api.py  http.py
src/pykeydelivery/classes/: __init__.py  http.py  keydelivery.py
