[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glsapi"
version = "0.9.0"
authors = [
  { name="Kumi Mitterer", email="glsapi@kumi.email" },
]
description = "Simple Python wrapper to fetch data from GLS (gls-group.eu)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://kumig.it/kumitterer/glsapi"
"Bug Tracker" = "https://kumig.it/kumitterer/glsapi/issues"