[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpdtrack"
version = "0.9.1"
authors = [
  { name="Kumi Mitterer", email="dpdtrack@kumi.email" },
]
description = "Simple Python wrapper to fetch data from DPD Austria (mydpd.at)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://kumig.it/kumitterer/dpdtrack"
"Bug Tracker" = "https://kumig.it/kumitterer/dpdtrack/issues"